Fixed card assignee visual bug
Assignee icon was not centered in the circle

--- a/components/Task/styles.module.scss
+++ b/components/Task/styles.module.scss
@@ -35,8 +35,8 @@
     position: absolute;
     top: 15px;
     right: 15px;
-    width: 25px;
-    height: 25px;
+    width: 30px;
+    height: 30px;
   }
 
   &__date {
